--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt && [ -f requirements.txt ] && pip3 install --user -r requirements.txt && pip3 install --user streamlit && sudo apt-get install -y libgl1-mesa-glx && echo '✅ Packages installed and Requirements met'",
+  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt && [ -f requirements.txt ] && pip3 install --user -r requirements.txt && pip3 install --user streamlit && sudo apt-get install -y libgl1-mesa-glx libglib2.0-0 && echo '✅ Packages installed and Requirements met'",
   "postAttachCommand": {
     "server": "streamlit run streamlit_app.py --server.enableCORS false --server.enableXsrfProtection false"
   },
